# fastapi-backend-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.run/: Run FastAPI App.run.xml
app/: __init__.py  main.py
app/api/v1/: __init__.py  demo_cache.py  demo_http.py  demo_logs.py  demo_mqtt.py  files.py  items.py
app/core/: __init__.py  config.py
app/db/: __init__.py  session.py
app/models/: __init__.py  item.py
app/schemas/: __init__.py  item.py
app/services/: __init__.py  cache_service.py  file_service.py  item_service.py  message_service.py
app/utils/: http_client.py  logger.py  mqtt_client.py  redis_client.py
docs/: DEPLOYMENT.md  DEVELOPMENT.md  FastAPI 后端项目模板 - 交付说明.md  FastAPI_Backend_Template.docx  FastAPI_后端项目模板_-_交付说明_(更新版).docx  PROJECT_OVERVIEW.md  QUICK_START.md  快速开始指南.md
mosquitto/: mosquitto.conf
scripts/: init_db.py
